# fog_pit

./: Cargo.toml  README.md  askama.toml  justfile
files/templates/: content.html  page.html
src/: commands.rs  main.rs
src/server/: mod.rs
src/server/html/: mod.rs
src/terminal_out/: mod.rs
